# chess960-nn

./: .dockerignore  .gitignore  Dockerfile  EXPLAINER.md  README.md  SUMMARY.md  netlify.toml  pyproject.toml  requirements-deploy.txt
scripts/: build_dataset.py  check_cuda.py  dashboard.py  eval_vs_stockfish.py  inspect_net.py  pretrain.py  rl_iteration.py  rl_loop.py  selfplay.py
src/chess960_nn/: __init__.py  config.py  dashboard.py  demo.py  encoding.py  eval.py  mcts.py  model.py  rl.py  selfplay.py  stockfish.py  train.py
src/chess960_nn/data/: __init__.py  dataset.py  pipeline.py
tests/: test_dashboard.py  test_data_pipeline.py  test_encoding.py  test_mcts.py  test_model.py  test_rl.py  test_selfplay.py  test_smoke.py  test_stockfish.py  test_train.py
web/: index.html
