[project]
name = "chess960-nn"
version = "0.1.0"
description = "Chess960 neural network engine (AlphaZero-style hybrid: supervised pretrain + RL self-play)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-chess>=1.999",
    "numpy>=1.26",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "aiosqlite>=0.20",
    "torch>=2.3",
    "torchvision>=0.18",
    "zstandard>=0.22",
]

# PyTorch wheels live on a separate index, configured below.
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess960_nn"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["chess960_nn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
